--- a/packages.bib
+++ b/packages.bib
@@ -30,3 +30,25 @@
   pages = {1-67},
   doi = {10.18637/jss.v045.i03},
 }
+@Manual{ggspatial,
+  title = {ggspatial: Spatial Data Framework for ggplot2},
+  author = {Dewey Dunnington},
+  year = {2023},
+  note = {R package version 1.1.9},
+  url = {https://CRAN.R-project.org/package=ggspatial},
+}
+@Book{ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+@Manual{wesanderson,
+  title = {wesanderson: A Wes Anderson Palette Generator},
+  author = {Karthik Ram and Hadley Wickham},
+  year = {2018},
+  note = {R package version 0.3.6},
+  url = {https://CRAN.R-project.org/package=wesanderson},
+}
