--- a/groceries.bib
+++ b/groceries.bib
@@ -323,6 +323,19 @@
   file = {/Users/gregmacfarlane/Zotero/storage/Q4SN2FKH/Delbosc and Currie - 2011 - The spatial context of transport disadvantage, soc.pdf;/Users/gregmacfarlane/Zotero/storage/IZUB756Q/S0966692311000469.html}
 }
 
+@article{dong2006,
+  title = {Moving from Trip-Based to Activity-Based Measures of Accessibility},
+  author = {Dong, Xiaojing and {Ben-Akiva}, Moshe E. and Bowman, John L. and Walker, Joan L.},
+  year = {2006},
+  journal = {Transportation Research Part A: Policy and Practice},
+  volume = {40},
+  number = {2},
+  pages = {163--180},
+  issn = {0965-8564},
+  doi = {10.1016/j.tra.2005.05.002},
+  abstract = {This paper studies the properties and performance of a new measure of accessibility, called the activity-based accessibility (ABA) measure, and compares it to traditional measures of accessibility, including isochrone, gravity and utility-based measures. The novel aspect of the ABA is that it measures accessibility to all activities in which an individual engages, incorporating constraints such as scheduling, and travel characteristics such as trip chaining. The ABA is generated from the day activity schedule (DAS) model system, an integrated system based on the concept of an activity pattern, which identifies the sequence and tour structure among all the activities and trips taken by an individual during a day. A byproduct is an individual's expected maximum utility over the choices of all available activity patterns, and from this the ABA is derived. The ABA is related to the logsum accessibility measures frequently derived from destination and mode discrete choice models. The key difference is that it is generated not by examining a particular trip, but by examining all trips and activities throughout the day. A case study using data from Portland, Oregon, demonstrates the rich picture of accessibility made available by use of the ABA, and highlights differences between the ABA and more traditional measures of accessibility. The ABA is successful in (a) capturing taste heterogeneity across individuals (not possible with aggregate accessibility measures), (b) combining different types of trips into a unified measure of accessibility (not possible with trip-based measures), (c) reflecting the impact of scheduling and trip chaining on accessibility (not possible with trip-based measures), and (d) quantifying differing accessibility impacts on important segments of the population such as unemployed and zero auto households (not possible with aggregate measures, and limited with trip-based measures).}
+}
+
 @article{dons2018,
   title = {Transport Mode Choice and Body Mass Index: {{Cross-sectional}} and Longitudinal Evidence from a {{European-wide}} Study},
   shorttitle = {Transport Mode Choice and Body Mass Index},
@@ -851,6 +864,30 @@
   abstract = {This book describes the new generation of discrete choice methods, focusing on the many advances that are made possible by simulation. Researchers use these statistical methods to examine the choices that consumers, households, firms, and other agents make. Each of the major models is covered: logit, generalized extreme value, or GEV (including nested and cross-nested logits), probit, and mixed logit, plus a variety of specifications that build on these basics. Simulation-assisted estimation procedures are investigated and compared, including maximum stimulated likelihood, method of simulated moments, and method of simulated scores. Procedures for drawing from densities are described, including variance reduction techniques such as anithetics and Halton draws. Recent advances in Bayesian procedures are explored, including the use of the Metropolis-Hastings algorithm and its variant Gibbs sampling. The second edition adds chapters on endogeneity and expectation-maximization (EM) algorithms. No other book incorporates all these fields, which have arisen in the past 25 years. The procedures are applicable in many fields, including energy, transportation, environmental studies, health, labor, and marketing.},
   isbn = {978-0-521-74738-7},
   langid = {english}
+}
+
+@misc{udot2023,
+  title = {Zero {{Fatalities}}: {{Up-to-date}} Fatality and Serious Injury Data.},
+  author = {{UDOT}},
+  year = {2023},
+  journal = {Zero Fatalities},
+  urldate = {2023-09-02},
+  abstract = {Up-To-Date Fatality and Serious Injury Data View Year to Year Fatality Reports {$>$} The 100 Deadliest Days Total Fatalities and Serious Injuries Total Fatal Crashes and Serious Injury Crashes Total Motorcycle Fatalities/ Injuries Total Pedestrian Fatalities/ Injuries Total Bicycle Fatalities/ Injuries Total Unrestrained Fatalities/ Serious Injuries Alcohol and Drug Related Fatalities Total Speed Management Fatalities [\ldots ]},
+  howpublished = {https://zerofatalities.com/statistics/},
+  langid = {american},
+  file = {/Users/gregmacfarlane/Zotero/storage/TPU83WIW/statistics.html}
+}
+
+@misc{udot2023a,
+  title = {Utah {{Department}} of {{Transportation}}: {{About Us}}},
+  author = {{UDOT}},
+  year = {2023},
+  journal = {UDOT},
+  urldate = {2023-09-02},
+  abstract = {About Us},
+  howpublished = {https://www.udot.utah.gov/connect/about-us/},
+  langid = {american},
+  file = {/Users/gregmacfarlane/Zotero/storage/63LIJBQD/about-us.html}
 }
 
 @misc{usdepartmentoftransportation2022,
