Rotate pages that are meant to be landscape

--- a/Equitable-Access-to-Nutrition-in-Utah.tex
+++ b/Equitable-Access-to-Nutrition-in-Utah.tex
@@ -1437,7 +1437,7 @@ log-sum without vehicles is around -100. Because the log-sum occurs on
 the same scale in both cases, this represents a serious additional cost
 for non-vehicle users.
 
-\begin{figure}
+\begin{sidewaysfigure}
 
 \begin{minipage}[t]{0.50\linewidth}
 
@@ -1472,7 +1472,7 @@ for non-vehicle users.
 \caption{\label{fig-map-nocar}Access to groceries in Salt Lake County
 with and without a vehicle.}
 
-\end{figure}
+\end{sidewaysfigure}
 
 \bookmarksetup{startatroot}
 
@@ -1666,7 +1666,7 @@ containing the improvement sees a per-household-trip benefit well over
 intuitive, as the improvement of a store matters less if the stores
 close to you are already sufficient.
 
-\begin{figure}
+\begin{sidewaysfigure}
 
 \begin{minipage}[t]{0.50\linewidth}
 
@@ -1701,7 +1701,7 @@ close to you are already sufficient.
 \caption{\label{fig-s2sjut}Estimated per-household benefits of improving
 an existing store in Utah and San Juan Counties.}
 
-\end{figure}
+\end{sidewaysfigure}
 
 The results of the third scenario, improving the access of non-motorized
 and public transit access to stores, are shown in
